web: fix spacing between game create cells and button

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -134,7 +134,7 @@ h3 {
   border-width: 1px;
   border-style: solid;
   border-color: #ddd;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 1200px) {
